--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -31,7 +31,7 @@
     width: 30px;
     height: 30px;
     border: 7px solid;
-    border-color: rgb(5, 5, 143) transparent;
+    border-color: rgb(17, 17, 20) transparent;
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
@@ -49,7 +49,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 0 3px 1px black;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.182);
 }
 
 header .site-logo {
